# ChangeLog for net-misc/socat
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/socat/ChangeLog,v 1.119 2013/06/09 14:45:21 jer Exp $

  09 Jun 2013; Jeroen Roovers <jer@gentoo.org> -socat-1.7.2.1.ebuild:
  Old.

  09 Jun 2013; Agostino Sarubbo <ago@gentoo.org> socat-1.7.2.2.ebuild:
  Stable for sparc, wrt bug #471354

  09 Jun 2013; Agostino Sarubbo <ago@gentoo.org> socat-1.7.2.2.ebuild:
  Stable for ppc, wrt bug #471354

  09 Jun 2013; Agostino Sarubbo <ago@gentoo.org> socat-1.7.2.2.ebuild:
  Stable for ia64, wrt bug #471354

  09 Jun 2013; Agostino Sarubbo <ago@gentoo.org> socat-1.7.2.2.ebuild:
  Stable for alpha, wrt bug #471354

  04 Jun 2013; Sergey Popov <pinkbyte@gentoo.org> socat-1.7.2.2.ebuild:
  Stable on amd64 and x86, wrt bug #471354

  02 Jun 2013; Markus Meier <maekke@gentoo.org> socat-1.7.2.2.ebuild:
  arm stable, bug #471354

  28 May 2013; Jeroen Roovers <jer@gentoo.org> socat-1.7.2.2.ebuild:
  Stable for HPPA (bug #471354).

  27 May 2013; Jeroen Roovers <jer@gentoo.org> socat-1.7.2.2.ebuild:
  Fix ifconfig path in test.sh.

  27 May 2013; Jeroen Roovers <jer@gentoo.org> socat-2.0.0_beta6.ebuild:
  Remove unneeded autotools.

  27 May 2013; Jeroen Roovers <jer@gentoo.org>
  -files/socat-1.7.2.0-cross-compile.patch, -socat-2.0.0_beta5.ebuild:
  Old.

*socat-1.7.2.2 (27 May 2013)
*socat-2.0.0_beta6 (27 May 2013)

  27 May 2013; Jeroen Roovers <jer@gentoo.org> +socat-1.7.2.2.ebuild,
  +socat-2.0.0_beta6.ebuild:
  Version bump (bug #471354).

  02 Dec 2012; Tim Harder <radhermit@gentoo.org> socat-1.7.2.1.ebuild:
  Inherit autotools eclass (bug #445526).

  26 Oct 2012; Mike Frysinger <vapier@gentoo.org>
  +files/socat-1.7.2.1-long-long.patch, socat-1.7.2.1.ebuild,
  socat-2.0.0_beta5.ebuild:
  Build x32 support work #436164 by redneb.

  26 Jul 2012; Christoph Junghans <ottxor@gentoo.org> socat-1.7.2.1.ebuild:
  added ~x86-macos
