@@ -3,15 +3,17 @@ Hash: SHA256
 
 AUX socat-1.7.2.1-long-long.patch 1764 SHA256 f343cb0e7365a90aa9c9ab001327e9dbcfcd56e2fd9835a5b8e216355b68006a SHA512 8095a5c4af58f9a2bd751d03b8262cac36c45be4a35fa277e9fd75511a2039d6853b5f004212fff4be56305b7935aace505bc55b6c4cd6b72a928b4b283772fe WHIRLPOOL 274273eb1985d2dff66d949fe8850bb06808c9b3ecb8b481a9cf1b4e46d283c124cc5239e542e937d1cc735b8d713a9588cb65fa0245375a1fd4a2a2bcac1995
 DIST socat-1.7.2.2.tar.bz2 433222 SHA256 9a167af11a4d3809cbc66f5e2dcb39b6e371251282ef5de6ea6ff0c4be8a953c SHA512 712a9e061139ffc38552db9321bac143f22da85852dc8b30148c5fb3b4209d4a963a62948aaf9eb35f63b23b4b6459627effb5a2b6757b70ddecffe31860b73b WHIRLPOOL e86856e8e5b511bd3c85fb22dcfeca3b2ac0dddf1f387e0e00c728bf9ce8e30907bb3d6a196c6b68e4d0cfd1a36ce2b32cbb263fa3898f95d2d1001a8c0758b9
-DIST socat-2.0.0-b6.tar.bz2 461128 SHA256 7f43fb14a96eb8595512d208adac14038f068e43db6f9e4f9484eae7cf06c70e SHA512 7e1fbda0319d82f7b6d0a7dd6f6ae4c2259b07057f43ca81d716d134bc8b717c67e34615f938da02c9a003c33b4024c5b809dfbc5e2c697302d6fd5b78df17d5 WHIRLPOOL d27a7230f6eddb740f0c9c141d1695623228e25abb606af61262ecf47b87d04a773b3655972a9b13442e9a628949147f189db50093c96824bca799ad6117259a
+DIST socat-1.7.2.3.tar.bz2 424461 SHA256 0598ac54af7b138cda9e3c141bcf0cc63eeb2ab31f468a772dc3f7eb3896aad0 SHA512 d34dea6d8fb29d25871b881c1aaf9d02ab69c95e90f6eba54dd3626987b7a19595ba06306abffb735b2ee014052a2ef37803166b6108c4edc57e1c8f511aef9f WHIRLPOOL ce1ec2886ed897e2db15946edcf7ad1026b965d097963f8dec9fff767958b640e7bf3b72de67c094d25c4857c40bbdbd15abf01b940367a994176c04792aa4f3
+DIST socat-2.0.0-b7.tar.bz2 466584 SHA256 f3f964e69db2dc9957757185cfed498c6d245af6f5b808e4003c7e9b194bd340 SHA512 1f1e18a901842d98fcc63888ee126bd5d2cc6f2c239589a3b940a10886bc3ec97fef83a1ad3c3436b986e79e2e16e3cc28fd9ba6ac342866a20560b238274b62 WHIRLPOOL 439196b5a560fb859c41d8b2b8881f480168709895fab73b7637c9964c18cf2a1ec4e0dc6273732d783c557a3b0e433356a5c1d37278570aee011f694eec88b2
 EBUILD socat-1.7.2.2.ebuild 1366 SHA256 e8a3ac5e5478e35e9bcc2bcac6640f1a63e1b1cd40f84df149c98e226ffaf71f SHA512 faec6c995620da72cac95e38a2bec6dbd797a179a6d150f12b8ded5b7253eeb7c91e883314bdd822fc18fff0e5d284c1f72ddcca5f2f4917e106be67a697a3c0 WHIRLPOOL 7bea7976d1259706fa245885b0d37e19b9f483406dc809346fb68dcb665567b4d7e4c8a679da47e5a7e2d0336924fa9a2791b76e7eb54182986a92849db83deb
-EBUILD socat-2.0.0_beta6.ebuild 1285 SHA256 58d4153ea8a56cea687772fd938148209d02c8cb6bf0a493f4d05b662922ae71 SHA512 1938af0a149fa7b1c45eb8c2336747ad1939c673e95d570b0f1857ee9f820fd67bc09da4064d04c0ad67b684c300af6b785cfad274288c5ecf3cda7a86274460 WHIRLPOOL d6b5382f7b00830ab9c6593072e9598ee210752946355d8b5b33d1c2f0f822e061fcd2917f84d99246bc0c72f7f8481eb63052da3cee48f09e5660a716c792a7
-MISC ChangeLog 15213 SHA256 fcd29466d4784936e3dbe9840226583c716d2ca2ed671defd85fe6fad8c3eb16 SHA512 07edd817b2cd528eef6ce46def5aaccd9eda1cd4eec84ab0e5b58ad6a3a8d5866982916a1a3e54a7dbd677bd4577aa49b4ecc6fa2350e6c178a2083f155ea052 WHIRLPOOL 2353c48a7e8f9008c2c449739a427d13882cde65530bd482fc11ae5c217c83575db8c3ad707194a9357f2fbbe8dab5767a6c5bc390a1942eb176a17872209209
+EBUILD socat-1.7.2.3.ebuild 1372 SHA256 f69772b2f4fc0aba7a4de8edc4f8bf32edc520279d6b2bdae3672c9d0bd645c7 SHA512 7654b44ed1b7252e6e31c752ee4fd4045f4e06133ef0370962a5b81c288b8c67af5a254706a7f82d32fedb9da987dffa74bb0eea83573f207ac5b46a26fedb41 WHIRLPOOL ef476412f288c2710de7ffb1967136270d700a254e24fc4e554494b66cc752304b580086b2413874e041ad800a342b2787195b50e4411a2e62010c596bb962a5
+EBUILD socat-2.0.0_beta7.ebuild 1299 SHA256 d9367946a9725a4c54f739dae03e31a08369702fb0c104212fb3bed81436164f SHA512 39fd9d036679f1da81ca46223b743025dc9522bdc9be5ecd42a4ce9801c645614ca960b8911689b0197c914756f1e0080974daf71830bfb1f9437a033da94415 WHIRLPOOL 345031ea40e87de1c1af33da47f8b2a5b490b169e90c5ce88636865ce165b3ce5f258a9515c76a43188e2316b03da59b059d1679463e343fb159ce9e15b232ef
+MISC ChangeLog 15433 SHA256 a25cbb829aeced8bad0c094fa4d37c21864dc14344cc41a9bbafade3da0965a8 SHA512 fe57c9984f1fdf9cd60129307098d68561dd2d1d35e115b4cfde8a4efa73683085be8d6caf01e85792a9ce2a2d7e279c67bc53cae8028de75432284373319f13 WHIRLPOOL c20ff8249fba52676258db7b8a9edd1333bd799661dbc91778506658543279f02f80829fce16fa6372e94f0ce83d11f84e86bc6be6056d4bce4e9f8c1f05ead2
 MISC metadata.xml 160 SHA256 39e232fc7ec88ca0b077cb3950cb39d15cd990842b88d5bfe14f02f34d72f37b SHA512 3ac3a74a7cdf45b14884d967b10e4752f9cb06c579f6d7baf921f9be5450cbe7536c2e5a480ac3c95156eb6abb32e68f74cecc86b9ac0dcc4e0e1b4b255c3e20 WHIRLPOOL f7504ce9e3e8a58d19bba5448305f806c2ae01d0a8d2cf09d6bc6a089a6e1c28a1b12a80bb6020584b5ed21df94e4936b1695a54548704cb8679660b6b807955
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlG0lQMACgkQVWmRsqeSphPK5QCfbEGWUebkOEl2C3c0yFypMMX6
-ENIAn0ein6CVZ9bD/ylBl0Z8mK6+zuId
-=RC9T
+iEYEAREIAAYFAlLo1x0ACgkQVWmRsqeSphMSxQCdGBi3jI24S6je1F4ZnyvXXxxf
+fYwAniU7jB5KqmeRrz7VmnU57MAYoBBf
+=wc/7
 -----END PGP SIGNATURE-----
