@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/socat
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/socat/ChangeLog,v 1.119 2013/06/09 14:45:21 jer Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/socat/ChangeLog,v 1.120 2014/01/29 10:25:32 jer Exp $
+
+*socat-2.0.0_beta7 (29 Jan 2014)
+*socat-1.7.2.3 (29 Jan 2014)
+
+  29 Jan 2014; Jeroen Roovers <jer@gentoo.org> +socat-1.7.2.3.ebuild,
+  -socat-2.0.0_beta6.ebuild, +socat-2.0.0_beta7.ebuild:
+  Version bump (bug #499668).
 
   09 Jun 2013; Jeroen Roovers <jer@gentoo.org> -socat-1.7.2.1.ebuild:
   Old.
